# routes/api.php
@@ -16,3 +16,10 @@ use Illuminate\Http\Request;
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
+
+
+Route::get('events/{id}', 'EventController@getEvent');
+Route::get('events/{id}/options', 'EventController@getEventOptions');
+Route::put('events/{id}', 'EventController@updateEvent');
+Route::put('events', 'EventController@updateEvents');
+Route::post('events', 'EventController@createEvent');
