# routes/web.php
@@ -44,7 +44,7 @@ Route::get('events/{id}', 'EventController@getEvent');
 Route::get('events/{id}/options', 'EventController@getEventOptions');
 Route::put('events/{id}', 'EventController@updateEvent');
 Route::put('events', 'EventController@updateEvents');
-Route::post('events', 'EventController@updateEvents');
+Route::post('events', 'EventController@createEvent');
 
 
 
